--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -70,9 +70,11 @@ function verifyPayment(orderId, paymentId, signature) {
      $.post("/verify", { orderId: orderId, paymentId: paymentId, signature: signature })
          .done(function(isValid) {
              if (isValid) {
-                 console.log("Payment successful");
+            	 alert("Payment successful")
+                 window.loaction.href='payment-success';
              } else {
-                 console.log("Payment failed");
+                 alert("Payment failed");
+                 window.location.href='payment-failure';
              }
          })
          .fail(function(error) {
